--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
     compile 'com.android.support:support-v4:26.0.1'
     compile 'com.android.support:support-vector-drawable:26.0.1'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+
     testCompile 'junit:junit:4.12'
 }
