--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,8 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.android.support:support-vector-drawable:24.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'nl.qbusict:cupboard:2.1.4'
+    compile 'nl.littlerobots:cupboard-tools:0.2.0'
+
     testCompile 'junit:junit:4.12'
 }
