--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'nl.qbusict:cupboard:2.1.4'
     compile 'nl.littlerobots:cupboard-tools:0.2.0'
+    compile 'com.alexvasilkov:events:1.0.0'
 
     testCompile 'junit:junit:4.12'
 }
